--- a/index.html
+++ b/index.html
@@ -409,25 +409,25 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            // Configuração das opções de preços
+            // Configuração das opções de preços CORRIGIDA
             const pricingOptions = {
                 '15': {
-                    'sem-sem': { option: 'Opção 2', price: 'R$ 12,50', animation: 'Sem animação', revision: 'Sem revisão' },
-                    'sem-com': { option: 'Opção 1', price: 'R$ 07,50', animation: 'Sem animação', revision: 'Com revisão' },
-                    'com-sem': { option: 'Opção 4', price: 'R$ 17,50', animation: 'Com animação', revision: 'Sem revisão' },
-                    'com-com': { option: 'Opção 3', price: 'R$ 12,50', animation: 'Com animação', revision: 'Com revisão' }
+                    'sem-sem': { option: 'Opção 1', price: 'R$ 07,50', animation: 'Sem animação', revision: 'Sem revisão' },
+                    'sem-com': { option: 'Opção 2', price: 'R$ 12,50', animation: 'Com animação', revision: 'Com revisão' },
+                    'com-sem': { option: 'Opção 3', price: 'R$ 12,50', animation: 'Com animação', revision: 'Sem revisão' },
+                    'com-com': { option: 'Opção 4', price: 'R$ 17,50', animation: 'Com animação', revision: 'Com revisão' }
                 },
                 '20': {
-                    'sem-sem': { option: 'Opção 6', price: 'R$ 15,00', animation: 'Sem animação', revision: 'Sem revisão' },
-                    'sem-com': { option: 'Opção 5', price: 'R$ 10,00', animation: 'Sem animação', revision: 'Com revisão' },
-                    'com-sem': { option: 'Opção 8', price: 'R$ 20,00', animation: 'Com animação', revision: 'Sem revisão' },
-                    'com-com': { option: 'Opção 7', price: 'R$ 15,00', animation: 'Com animação', revision: 'Com revisão' }
+                    'sem-sem': { option: 'Opção 5', price: 'R$ 10,00', animation: 'Sem animação', revision: 'Sem revisão' },
+                    'sem-com': { option: 'Opção 6', price: 'R$ 15,00', animation: 'Sem animação', revision: 'Com revisão' },
+                    'com-sem': { option: 'Opção 7', price: 'R$ 15,00', animation: 'Com animação', revision: 'Sem revisão' },
+                    'com-com': { option: 'Opção 8', price: 'R$ 20,00', animation: 'Com animação', revision: 'Com revisão' }
                 },
                 '30': {
-                    'sem-sem': { option: 'Opção 10', price: 'R$ 17,50', animation: 'Sem animação', revision: 'Sem revisão' },
-                    'sem-com': { option: 'Opção 9', price: 'R$ 12,50', animation: 'Sem animação', revision: 'Com revisão' },
-                    'com-sem': { option: 'Opção 12', price: 'R$ 20,00', animation: 'Com animação', revision: 'Sem revisão' },
-                    'com-com': { option: 'Opção 11', price: 'R$ 17,50', animation: 'Com animação', revision: 'Com revisão' }
+                    'sem-sem': { option: 'Opção 9', price: 'R$ 12,50', animation: 'Sem animação', revision: 'Sem revisão' },
+                    'sem-com': { option: 'Opção 10', price: 'R$ 17,50', animation: 'Sem animação', revision: 'Com revisão' },
+                    'com-sem': { option: 'Opção 11', price: 'R$ 17,50', animation: 'Com animação', revision: 'Sem revisão' },
+                    'com-com': { option: 'Opção 12', price: 'R$ 25,00', animation: 'Com animação', revision: 'Com revisão' }
                 }
             };
             
